WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273468
[WPE] WPE Platform: Fix touch events propagation
https://bugs.webkit.org/show_bug.cgi?id=273468
Summary
[WPE] WPE Platform: Fix touch events propagation
Pawel Lampe
Reported
2024-04-30 00:52:27 PDT
Currently touch events are not propagated correctly: - with one-figer touch in general - there's no 'touchend' propagated
Attachments
Add attachment
proposed patch, testcase, etc.
Pawel Lampe
Comment 1
2024-04-30 01:11:51 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27923
EWS
Comment 2
2024-04-30 02:25:54 PDT
Committed
278161@main
(a0949547e09c): <
https://commits.webkit.org/278161@main
> Reviewed commits have been landed. Closing PR #27923 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug