Cherry-pick 278161@main (a0949547e09c). https://bugs.webkit.org/show_bug.cgi?id=273468

[WPE] WPE Platform: Fix touch events propagation
    https://bugs.webkit.org/show_bug.cgi?id=273468

    Reviewed by Carlos Garcia Campos.

    This change makes it possible to store events with sequence id == 0
    in the HashMap thus allowing them to be propagated.
    This change also takes touch points of UP/CANCEL events into account
    so that those events are propagated correctly as well.

    * Source/WebKit/UIProcess/API/wpe/WPEWebView.cpp:
    (WKWPE::m_backend):
    * Source/WebKit/UIProcess/API/wpe/WPEWebView.h:

    Canonical link: https://commits.webkit.org/278161@main

Canonical link: https://commits.webkit.org/274313.201@webkitglib/2.44